GPL/P6/tests/t064.err
Semantic error on line 5: Variable 'a' previously declared.
Semantic error on line 6: Variable 'a' previously declared.
Semantic error on line 9: Variable 'b' previously declared.
Semantic error on line 10: Variable 'b' previously declared.
Semantic error on line 13: Variable 'c' previously declared.
Semantic error on line 14: Variable 'c' previously declared.
Semantic error on line 17: Variable 'd' previously declared.
Semantic error on line 18: Variable 'd' previously declared.
Semantic error on line 21: Variable 'f' previously declared.
Semantic error on line 22: Variable 'f' previously declared.
